# raylib_animation

./: .gitignore  CMakeLists.txt
gemini_prompts/: C_CODING_STYLE.md  style_demo.c  style_demo.h
src/: CMakeLists.txt  animation1.c  animation1.h  animation_modules.h  button1.c  button1.h  dynamic_array.h  easing_functions.c  easing_functions.h  environment.h  main.c  utils.h
